crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__tuples-4.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"let foo = () => [a, b];\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 23,
                    },
                },
                span: 0..23,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 7,
                                },
                            },
                            span: 4..7,
                            kind: Ident(
                                BindingIdent {
                                    name: "foo",
                                    mutable: false,
                                    span: 4..7,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 4,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 7,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 10,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 22,
                                    },
                                },
                                span: 10..22,
                                kind: Lambda(
                                    Lambda {
                                        params: [],
                                        body: Expr(
                                            Expr {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 16,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 22,
                                                    },
                                                },
                                                span: 16..22,
                                                kind: Tuple(
                                                    Tuple {
                                                        elems: [
                                                            ExprOrSpread {
                                                                spread: None,
                                                                expr: Expr {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 17,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 18,
                                                                        },
                                                                    },
                                                                    span: 17..18,
                                                                    kind: Ident(
                                                                        Ident {
                                                                            loc: SourceLocation {
                                                                                start: Position {
                                                                                    line: 0,
                                                                                    column: 17,
                                                                                },
                                                                                end: Position {
                                                                                    line: 0,
                                                                                    column: 18,
                                                                                },
                                                                            },
                                                                            span: 17..18,
                                                                            name: "a",
                                                                        },
                                                                    ),
                                                                    inferred_type: None,
                                                                },
                                                            },
                                                            ExprOrSpread {
                                                                spread: None,
                                                                expr: Expr {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 20,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 21,
                                                                        },
                                                                    },
                                                                    span: 20..21,
                                                                    kind: Ident(
                                                                        Ident {
                                                                            loc: SourceLocation {
                                                                                start: Position {
                                                                                    line: 0,
                                                                                    column: 20,
                                                                                },
                                                                                end: Position {
                                                                                    line: 0,
                                                                                    column: 21,
                                                                                },
                                                                            },
                                                                            span: 20..21,
                                                                            name: "b",
                                                                        },
                                                                    ),
                                                                    inferred_type: None,
                                                                },
                                                            },
                                                        ],
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                        ),
                                        is_async: false,
                                        return_type: None,
                                        type_params: None,
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
